--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: blog_api_development
+  database: ror_social_scaffold_development
+  username: <%= ENV['psql_uid'] %>
+  password: <%= ENV['psql_pwd'] %>
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,8 +59,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: blog_api_test
-
+  database: ror_social_scaffold_development
+  username: <%= ENV['psql_uid'] %>
+  password: <%= ENV['psql_pwd'] %>
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
