--- a/config/database.yml
+++ b/config/database.yml
@@ -85,5 +85,5 @@ test:
 production:
   <<: *default
   database: blog_api_production
-  username: <%= ENV['prod_psql_uid'] %>
-  password: <%= ENV['prod_psql_pwd'] %>
+  # username: <%= ENV['prod_psql_uid'] %>
+  # password: <%= ENV['prod_psql_pwd'] %>
